# docs

./: .gitignore  .pre-commit-config.yaml  CODEOWNERS  CONTRIBUTING.md  GLOSSARY.md  INCIDENTS.md  PROCESS.md  README.md  SUMMARY.md  contributing.md  incidents.md  process.md
.github/: dependabot.yml
.scripts/: create_table_summary.py  git_folder_lastmod.sh  update_rfc_last_modified.py  validate_rfc.py
adr/: README.md  SUMMARY.md  api_faceting.md  base_ami_updates.md  c4_model_for_services.md  gha_aws.md  github_groups_permissions.md  github_permissions.md  github_security.md  iiif-builder-identity-service.md  logging.md  logicmonitor.md  secrets.md
architecture/: README.md  aws_accounts.md  domain_names.md  partners.md  services.md  system_context.md  system_context.puml
domain_model/: README.md  calm_mapping.md  sierra_mapping.md
fortnotes/: 20191024.md  20191108.md  20191122.md  20191206.md  20191220.md  20200118.md  20200131.md  20200214.md  20200228.md  20200313.md  20200327.md  20200424.md  20200507.md  20200522.md  20200605.md  20200619.md  20200703.md  20200717.md  20200731.md  20200814.md  20200828.md  20200911.md  20200925.md  20201009.md  20201023.md  20201106.md  20201120.md  20201204.md  20201218.md  20210115.md  20210129.md  20210211.md  20210226.md  (+132 more)
rfcs/083-stable_identifiers/: .gitignore  Identifiable.scala  README.md  docker-compose.yaml  id_minter.py  id_minter_demo.ipynb  identifiers_sample.csv  pyproject.toml  schema_migration.ipynb
rfcs/089-identifiers-api/: .gitignore  README.md  openapi.md  openapi.yaml  pyproject.toml  render_docs.py
(+423 files in other folders)
