[project]
name = "stable-identifiers-rfc"
version = "0.1.0"
description = "Demo notebooks for RFC XXX: Stable identifiers following mass record migration"
requires-python = ">=3.10"
dependencies = [
    "cryptography>=48.0.1",
    "pymysql>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "ipykernel",
]
